--- a/index.html
+++ b/index.html
@@ -8,19 +8,31 @@
 <script src="/controller.js" type="text/javascript"></script>
 <link rel="stylesheet" href="/style.css">
 <script type="text/javascript" src="\angular-ui-bootstrap\dist\ui-bootstrap-tpls.js"> </script>
-
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css" />
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+<script data-require="angular.js@1.3.9" data-semver="1.3.9" src="https://code.angularjs.org/1.3.9/angular.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <body>
 
   <div ng-app="myApp" ng-controller="myCtrl">
+
     <div class="container">
-      <div class="row-fluid">
-        <form class="row-fluid">
-          <div class="container-fluid">
-            Country Name <input type="text" class="form-control autocomplete" ng-model="selected" typeahead="state for state in states | filter:$viewValue">
-          </div>
-        </form>
+      <h1 align="center">AutoComplete using AngularJS</h1>
+      <hr />
+      <div>
+        <label>Select your car Name</label>
+        <input type="text" name="car" id="car" ng-model="car" ng-keyup="autocomp(car)" placeholder="Search your car" class="form-control" />
+        <ul class="list-group" ng-hide="hideinfo">
+          <li class="list-group-item list-group-item-success" ng-repeat="carinfo in search_car" ng-click="choose_textbox(carinfo)">{{carinfo}}</li>
+        </ul>
+        <br />
+        <p>You Selected <b>{{ car }}</b></p>
       </div>
     </div>
+
+
+
     enter brand <input type="text" ng-model="brand">
     enter style <input type="text" ng-model="style">
     enter item <input type="text" ng-model="item">
@@ -38,17 +50,15 @@
         <td>{{row.item}}</td>
         <td>{{row.price}}</td>
       </tr>
-    <tr>
+      <tr>
         <td></td>
         <td></td>
         <td>Total</td>
         <td>{{total}}</td>
       </tr>
 
-
     </table>
     <br>
-  </div>
 </body>
 
 </html>
