--- a/index.html
+++ b/index.html
@@ -1,64 +1,61 @@
 <html>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="/autocomplete.js" type="text/javascript"></script>
 <script src="/controller.js" type="text/javascript"></script>
 <link rel="stylesheet" href="/style.css">
-<script type="text/javascript" src="\angular-ui-bootstrap\dist\ui-bootstrap-tpls.js"> </script>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css" />
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-<script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-<script data-require="angular.js@1.3.9" data-semver="1.3.9" src="https://code.angularjs.org/1.3.9/angular.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
 <body>
 
-  <div ng-app="myApp" ng-controller="myCtrl">
+  <div ng-app="myApp">
 
-    <div class="container">
+    <div ng-controller="myCtrl1" class="container">
       <h1 align="center">AutoComplete using AngularJS</h1>
       <hr />
-      <div>
-        <label>Select your car Name</label>
-        <input type="text" name="car" id="car" ng-model="car" ng-keyup="autocomp(car)" placeholder="Search your car" class="form-control" />
-        <ul class="list-group" ng-hide="hideinfo">
-          <li class="list-group-item list-group-item-success" ng-repeat="carinfo in search_car" ng-click="choose_textbox(carinfo)">{{carinfo}}</li>
-        </ul>
-        <br />
-        <p>You Selected <b>{{ car }}</b></p>
-      </div>
+
+      <label>Select your car Name</label>
+      <input type="text" name="car" id="car" ng-model="car" ng-keyup="total(car)" placeholder="Search your car" class="form-control" />
+      <ul class="list-group" ng-hide="hideinfo">
+        <li class="list-group-item list-group-item-primary" ng-repeat="carinfo in search_car track by $index" ng-click="choose_textbox(carinfo)">{{carinfo}}</li>
+      </ul>
+      <br />
+      <p>You Selected <b>{{ car }}</b></p>
     </div>
 
 
+    <div ng-controller="myCtrl">
+      enter brand <input type="text" ng-model="brand">
+      enter style <input type="text" ng-model="style">
+      enter item <input type="text" ng-model="item">
+      <button type="button" ng-click="func()">get price</button>
+      <table class="table">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Brand</th>
+          <th scope="col">Style</th>
+          <th scope="col">Item</th>
+          <th scope="col">Price</th>
+        </tr>
+        <tr ng-repeat="row in rows track by $index">
+          <td scope="row">{{$index + 1}}</td>
+          <td>{{row.brand}}</td>
+          <td>{{row.style}}</td>
+          <td>{{row.item}}</td>
+          <td>{{row.price}}</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Total</td>
+          <td>{{total}}</td>
+        </tr>
 
-    enter brand <input type="text" ng-model="brand">
-    enter style <input type="text" ng-model="style">
-    enter item <input type="text" ng-model="item">
-    <button type="button" ng-click="func()">get price</button>
-    <table>
-      <tr>
-        <th>Brand</th>
-        <th>Style</th>
-        <th>Item</th>
-        <th>Price</th>
-      </tr>
-      <tr ng-repeat="row in rows track by $index">
-        <td>{{row.brand}}</td>
-        <td>{{row.style}}</td>
-        <td>{{row.item}}</td>
-        <td>{{row.price}}</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td>Total</td>
-        <td>{{total}}</td>
-      </tr>
+      </table>
+      <br>
+    </div>
+  </div>
 
-    </table>
-    <br>
 </body>
 
 </html>
