--- a/public/htmlFiles/mainContent.html
+++ b/public/htmlFiles/mainContent.html
@@ -1,31 +1,31 @@
-<div ng-controller="control">
-
-  enter brand <input type="text" ng-model="brand">
-  enter style <input type="text" ng-model="style">
-  enter item <input type="text" ng-model="item">
-  <button type="button" ng-click="myfunc()">get price</button>
-  <table class="table">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Brand</th>
-      <th scope="col">Style</th>
-      <th scope="col">Item</th>
-      <th scope="col">Price</th>
-    </tr>
-    <tr ng-repeat="row in rows track by $index">
-      <td scope="row">{{$index + 1}}</td>
-      <td>{{row.brand}}</td>
-      <td>{{row.style}}</td>
-      <td>{{row.item}}</td>
-      <td>{{row.price}}</td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>Total</td>
-      <td>{{total}}</td>
-    </tr>
-  </table>
-  <br>
-</div>
+enter brand <input type="text" ng-model="inputs.brand">
+enter style <input type="text" ng-model="inputs.style">
+enter item <input type="text" ng-model="inputs.item">
+<button type="button" ng-click="myfunc()">get price</button>
+  <input class="form-control" type="number" value="1" ng-model="inputs.quantity">
+<table class="table">
+  <tr>
+    <th scope="col">#</th>
+    <th scope="col">Qty</th>
+    <th scope="col">Item</th>
+    <th scope="col">Description</th>
+    <th scope="col">Price</th>
+  </tr>
+  <tr ng-repeat="row in rows track by $index">
+    <td scope="row">{{$index + 1}}</td>
+    <td>
+        <input class="form-control" type="number" data-ng-model="row.quantity" ng-change="updatePrice($index,row.quantity)">
+    </td>
+    <td>{{row.style}}</td>
+    <td>{{row.item}}</td>
+    <td>{{row.price}}</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td>Total</td>
+    <td>{{total}}</td>
+  </tr>
+</table>
+<br>
