--- a/public/htmlFiles/mainContent.html
+++ b/public/htmlFiles/mainContent.html
@@ -2,7 +2,37 @@ Brand {{inputs.brand}}
 Style {{inputs.style}}
 <br>
 Qty<input type="number" value="1" ng-model="inputs.quantity">
-enter item <input type="text" ng-model="inputs.item">
+
+<input type="text" ng-model="inputs.item"  ng-keyup="autoComplete(inputs.item)" placeholder="Enter Item">
+<ul class="list-group" ng-hide="hideinfo">
+  <li class="list-group-item list-group-item-primary" ng-repeat="autoCompleteItem in autoCompleteItems track by $index" ng-click="choose_textbox(autoCompleteItem)">{{autoCompleteItem}}</li>
+</ul>
+
+
+<!--  <div ng-controller="myCtrl2" class="container">
+    <label>Select your car Name</label>
+    <input type="text" name="car" id="car" ng-model="car" ng-keyup="total_1(car)" placeholder="Search your car" class="form-control" />
+    <ul class="list-group" ng-hide="hideinfo">
+      <li class="list-group-item list-group-item-primary" ng-repeat="carinfo in search_car track by $index" ng-click="choose_textbox(carinfo)">{{carinfo}}</li>
+    </ul>
+    <br />
+    <p>You Selected <b>{{ car }}</b></p>
+
+    <hr />
+  <!--   </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
 <button type="button" class="btn btn-primary" ng-click="myfunc()">get price</button>
 
 <table class="table">
