--- a/public/htmlFiles/mainContent.html
+++ b/public/htmlFiles/mainContent.html
@@ -1,15 +1,19 @@
 Brand {{inputs.brand}}
 Style {{inputs.style}}
-<br>
-Qty<input type="number" value="1" ng-model="inputs.quantity">
-
-<input type="text" ng-model="inputs.item"  ng-keyup="autoComplete(inputs.item)" placeholder="Enter Item">
-<ul class="list-group" ng-hide="hideinfo">
-  <li class="list-group-item list-group-item-primary" ng-repeat="autoCompleteItem in autoCompleteItems track by $index" ng-click="choose_textbox(autoCompleteItem)">{{autoCompleteItem}}</li>
-</ul>
 
 
-<button type="button" class="btn btn-primary" ng-click="myfunc()">get price</button>
+<div class="input-group mb-3">
+  <div class="input-group-prepend">
+    <input type="number" ng-model="inputs.quantity" placeholder="Qty">
+  </div>
+  <input class="float-right" type="text" ng-model="inputs.item" ng-keyup="autoComplete(inputs.item)" placeholder="Enter Item">
+  <ul class="list-group" ng-hide="hideinfo">
+    <li class="list-group-item list-group-item-primary" ng-repeat="autoCompleteItem in autoCompleteItems track by $index" ng-click="choose_textbox(autoCompleteItem)">{{autoCompleteItem}}</li>
+  </ul>
+  <div class="input-group-append">
+    <button type="button" class="btn btn-primary float-right" ng-click="myfunc()">get price</button>
+  </div>
+</div>
 
 <table class="table">
   <tr>
