--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/TableExport/3.3.5/js/tableexport.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-<body>
+<body class="m-5">
 
   <div ng-app="myApp">
 
@@ -16,6 +17,11 @@
 
     <div ng-include="'/htmlFiles/mainContent.html'"></div>
   </div>
+
+  <a id="dlink"  style="display:none;"></a>
+
+  <input type="button" onclick="tableToExcel('myTable', 'sheet', 'Quote.xls')" value="Export to Excel">
+
 
   </div>
 </body>
