--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <a id="dlink"  style="display:none;"></a>
 
-  <input type="button" onclick="tableToExcel('myTable', 'sheet', 'Quote.xls')" value="Export to Excel">
+  <input type="button" class="btn btn-primary" onclick="tableToExcel('myTable', 'sheet', 'Quote.xls')" value="Export to Excel">
 
 
   </div>
