--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <html>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.js"></script>
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/TableExport/3.3.5/js/tableexport.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-<body class="m-5">
+<body>
 
   <div ng-app="myApp">
-
-    <div ng-controller="myCtrl1" class="container">
-
-      <div ng-include="'/htmlFiles/brandsModal.html'"></div>
-      <div ng-include="'/htmlFiles/stylesModal.html'"></div>
-
-    <div ng-include="'/htmlFiles/mainContent.html'"></div>
-  </div>
-
-  <a id="dlink"  style="display:none;"></a>
-
-  <input type="button" class="btn btn-primary" onclick="tableToExcel('myTable', 'sheet', 'Quote.xls')" value="Export to Excel">
-
-
+    <div ng-include="'navbar.html'"></div>
+    <div class="m-4">
+      <div ng-view></div>
+    </div>
   </div>
 </body>
-<script src="/myCtrl1.js" type="text/javascript"></script>
-<link rel="stylesheet" href="/style.css">
+
+<script src="/app.js" type="text/javascript"></script>
+<script src="/dashboardCtrl.js" type="text/javascript"></script>
+<script src="/productEntryCtrl.js" type="text/javascript"></script>
 
 </html>
