--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 </body>
 
 <script src="/app.js" type="text/javascript"></script>
+<script src="/productEntryService.js" type="text/javascript"></script>
 <script src="/dashboardCtrl.js" type="text/javascript"></script>
 <script src="/productEntryCtrl.js" type="text/javascript"></script>
+<script src="/newQuoteCtrl.js" type="text/javascript"></script>
 
 </html>
